--- a/HighLandirect/App.Config
+++ b/HighLandirect/App.Config
@@ -3,7 +3,7 @@
   <connectionStrings>
     <!--add name="BookLibraryEntities" connectionString="metadata=res://*/BookLibraryModel.csdl|res://*/BookLibraryModel.ssdl|res://*/BookLibraryModel.msl;provider=System.Data.SqlServerCe.3.5;provider connection string=&quot;Data Source=|DataDirectory|\Resources\BookLibrary.sdf&quot;" providerName="System.Data.EntityClient"/-->
     <!--add name="KokyakuDataTestEntities" connectionString="metadata=res://*/CustomerEntity.csdl|res://*/CustomerEntity.ssdl|res://*/CustomerEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=|DataDirectory|\Resources\KokyakuDataTest.mdf&quot;" providerName="System.Data.EntityClient"/-->
-    <add name="MyDataEntities" connectionString="metadata=res://*/Domains.CustomerEntity.csdl|res://*/Domains.CustomerEntity.ssdl|res://*/Domains.CustomerEntity.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\Domains\Resources\EmptyData\MyData.sdf&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyDataEntities" connectionString="metadata=res://*/Domains.CustomerEntity.csdl|res://*/Domains.CustomerEntity.ssdl|res://*/Domains.CustomerEntity.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\Domains\Resources\MyData.sdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
