・テーマを設定 ・OrderViewModelでOrderを包むよう修正 ・Orderを削除できないのを修正

--- a/HighLandirect/HighLandirect.csproj
+++ b/HighLandirect/HighLandirect.csproj
@@ -172,6 +172,7 @@
     <Compile Include="ViewModels\CustomerListEventArgs.cs" />
     <Compile Include="ViewModels\CustomerListViewModel.cs" />
     <Compile Include="ViewModels\CustomerViewModel.cs" />
+    <Compile Include="ViewModels\OrderHistoryViewModel.cs" />
     <Compile Include="ViewModels\OrderListViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\ProductListViewModel.cs" />
@@ -217,6 +218,10 @@
     <Page Include="Resources\ImageResources.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\Theme\Theme.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
