--- a/HighLandirect/HighLandirect.csproj
+++ b/HighLandirect/HighLandirect.csproj
@@ -179,6 +179,7 @@
     <Compile Include="ViewModels\ProductListViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="Views\GoNextByEnterBehavior.cs" />
     <Compile Include="Views\MoveCaretToEndAction.cs" />
     <Compile Include="Views\OrderListView.xaml.cs">
       <DependentUpon>OrderListView.xaml</DependentUpon>
