顧客台帳のレイアウト修正。デザイン時にプレビューできるよう、ViewModelの型を配列から専用のものにに変更。

--- a/HighLandirect/HighLandirect.csproj
+++ b/HighLandirect/HighLandirect.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Domains\Reports\AtenaSeal.xaml.cs">
       <DependentUpon>AtenaSeal.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Domains\Reports\CustomerSource.cs" />
     <Compile Include="Domains\Reports\KokyakuDaicho.xaml.cs">
       <DependentUpon>KokyakuDaicho.xaml</DependentUpon>
     </Compile>
